z-index in side page fixed

--- a/src/styles/pdfl.css
+++ b/src/styles/pdfl.css
@@ -536,7 +536,7 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 50%;
   height: 100%;
   background: #143552;
-  z-index: 999;
+  z-index: 3;
   cursor: progress;
 }
 
@@ -551,6 +551,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 #side-page-loader.error{
   background: rgba(40, 50, 59);
+  z-index: 1;
 }
 #error-message-div{
   position: absolute;
@@ -888,6 +889,7 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 50px;
     color: #f5f5f5;;
     cursor: pointer;
+    z-index: 2;
   }
 
   .close-btn-graph:hover{
